--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,15 +1,27 @@
 <footer class="footer" id="footer">
-  <div class="container footer__container">
-    <a href="#" class="footer__logo logo">
-      <img src="img/logo.png" alt="Логотип Blanchard">
-    </a>
-    <div class="footer__social footer-social">
-      <a href="https://vk.com" class="footer-social__link footer-social__link--vk" target="_blank"
-         aria-label="вконтакте" rel="noopener noreferrer"></a>
-      <a href="https://instagram.com" class="footer-social__link footer-social__link--instagram" target="_blank"
-         aria-label="instagram" rel="noopener noreferrer"></a>
-      <a href="https://fb.com" class="footer-social__link footer-social__link--fb" target="_blank"
-         aria-label="facebook" rel="noopener noreferrer"></a>
-    </div>
-  </div>
-</footer>
+      <div class="container footer__container">
+        <a href="#" class="footer__logo logo">
+          <img src="img/logo.png" alt="Логотип Blanchard">
+        </a>
+        <div class="footer__social footer-social">
+          <a href="https://vk.com" class="footer-social__link footer-social__link--vk" target="_blank"
+             aria-label="вконтакте" rel="noopener noreferrer">
+            <svg>
+              <use xlink:href="img/sprite.svg#vk"></use>
+            </svg>
+          </a>
+          <a href="https://instagram.com" class="footer-social__link footer-social__link--instagram" target="_blank"
+             aria-label="instagram" rel="noopener noreferrer">
+            <svg>
+              <use xlink:href="img/sprite.svg#instagram"></use>
+            </svg>
+          </a>
+          <a href="https://fb.com" class="footer-social__link footer-social__link--fb" target="_blank"
+             aria-label="facebook" rel="noopener noreferrer">
+            <svg>
+              <use xlink:href="img/sprite.svg#fb"></use>
+            </svg>
+          </a>
+        </div>
+      </div>
+  </footer>
