--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -1,11 +1,12 @@
 <section class="hero">
-  <div class="hero__background">
-  </div>
-  <div class="container hero__container">
-    <h1 class="visually-hidden">Blanchard - художественная галерея</h1>
-    <h2 class="hero__title">Прикоснитесь к прекрасному</h2>
-    <p class="hero__text">Мы вынуждены отталкиваться от того, что реализация намеченных плановых заданий создаёт
-      предпосылки для новых предложений.</p>
-    <a href="#contacts" class=" btn hero__btn" role="button">Подписаться на рассылку</a>
-  </div>
-</section>
+      <div class="hero__background"></div>
+      <div class="container hero__container">
+        <h1 class="visually-hidden">Blanchard - художественная галерея</h1>
+        <h2 class="hero__title">Прикоснитесь к прекрасному</h2>
+        <p class="hero__text">
+          Мы вынуждены отталкиваться от того, что реализация намеченных плановых заданий создаёт
+          предпосылки для новых предложений.
+        </p>
+        <a href="#contacts" class=" btn hero__btn" role="button">Подписаться на рассылку</a>
+      </div>
+    </section>
