--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -1,58 +1,49 @@
 <section class="projects" id="projects">
-  <div class="container projects__container">
-    <h2 class="projects__title title">Проекты</h2>
-    <p class="projects__text text">
-      Предварительные выводы: постоянное информационно-пропагандистское обеспечение нашей деятельности однозначно
-      фиксирует необходимость своевременного выполнения сверхзадачи. А ещё независимые государства смешаны с не
-      уникальными данными до степени совершенной неузнаваемости, из-за чего возрастает их статус бесполезности. Прежде
-      всего, постоянное информационно-пропагандистское
-        <span tabindex="0" class="projects__tooltip"
-              data-tooltip="Пример современных тенденций - современная методология разработки">
-          <svg><use xlink:href="img/sprite.svg#i"></use></svg>
-        </span>
-      обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности принимаемых решений.
-      И нет сомнений, что действия представителей оппозиции могут быть рассмотрены
-        <span tabindex="0" class="projects__tooltip"
-              data-tooltip="Приятно, граждане, наблюдать, как сделанные на базе аналитики выводы вызывают у вас эмоции">
-          <svg><use xlink:href="img/sprite.svg#i"></use></svg>
-        </span>
-      исключительно в разрезе маркетинговых и финансовых
-        <span tabindex="0" class="projects__tooltip"
-              data-tooltip="В стремлении повысить качество">
-          <svg><use xlink:href="img/sprite.svg#i"></use></svg>
-        </span>
-      предпосылок. Банальные, но неопровержимые выводы, а также представители современных социальных
-      резервов призывают нас к новым свершениям, которые, в свою
-      очередь, должны быть смешаны с не уникальными данными до степени совершенной неузнаваемости.
-      Подробнее: <a href="https://blanchard-art.ru/projects/about" target="_blank"
-                   class="projects__link link" rel="noopener noreferrer">blanchard-art.ru/projects/about</a>
-    </p>
-    <h3 class="projects__subtitle subtitle">Партнёры проектов:</h3>
-    <div class="projects__bottom">
-      <div class="projects__slider projects-slider">
-        <div class="pagination-block__button-prev swiper-button-prev projects-slider__prev-btn"></div>
-        <div class="pagination-block__button-next swiper-button-next projects-slider__next-btn"></div>
-        <div class="swiper-wrapper projects-slider__wrapper">
-          <div class="swiper-slide projects-slider__slide projects-slider__slide--1">
-          </div>
-          <div class="swiper-slide projects-slider__slide projects-slider__slide--2">
-          </div>
-          <div class="swiper-slide projects-slider__slide projects-slider__slide--3">
-          </div>
-          <div class="swiper-slide projects-slider__slide projects-slider__slide--4">
-          </div>
-          <div class="swiper-slide projects-slider__slide projects-slider__slide--5">
-          </div>
-          <div class="swiper-slide projects-slider__slide projects-slider__slide--6">
-          </div>
-          <div class="swiper-slide projects-slider__slide projects-slider__slide--7">
-          </div>
-          <div class="swiper-slide projects-slider__slide projects-slider__slide--8">
-          </div>
-          <div class="swiper-slide projects-slider__slide projects-slider__slide--9">
+      <div class="container projects__container">
+        <h2 class="projects__title title">Проекты</h2>
+        <p class="projects__text text">
+          Предварительные выводы: постоянное информационно-пропагандистское обеспечение нашей деятельности однозначно
+          фиксирует необходимость своевременного выполнения сверхзадачи. А ещё независимые государства смешаны с не
+          уникальными данными до степени совершенной неузнаваемости, из-за чего возрастает их статус бесполезности. Прежде
+          всего, постоянное информационно-пропагандистское
+            <span tabindex="0" class="projects__tooltip"
+                  data-tooltip="Пример современных тенденций - современная методология разработки">
+              <svg><use xlink:href="img/sprite.svg#i"></use></svg>
+            </span>
+          обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности принимаемых решений.
+          И нет сомнений, что действия представителей оппозиции могут быть рассмотрены
+            <span tabindex="0" class="projects__tooltip"
+                  data-tooltip="Приятно, граждане, наблюдать, как сделанные на базе аналитики выводы вызывают у вас эмоции">
+              <svg><use xlink:href="img/sprite.svg#i"></use></svg>
+            </span>
+          исключительно в разрезе маркетинговых и финансовых
+            <span tabindex="0" class="projects__tooltip"
+                  data-tooltip="В стремлении повысить качество">
+              <svg><use xlink:href="img/sprite.svg#i"></use></svg>
+            </span>
+          предпосылок. Банальные, но неопровержимые выводы, а также представители современных социальных
+          резервов призывают нас к новым свершениям, которые, в свою
+          очередь, должны быть смешаны с не уникальными данными до степени совершенной неузнаваемости.
+          Подробнее: <a href="https://blanchard-art.ru/projects/about" target="_blank"
+                       class="projects__link link" rel="noopener noreferrer">blanchard-art.ru/projects/about</a>
+        </p>
+        <h3 class="projects__subtitle subtitle">Партнёры проектов:</h3>
+        <div class="projects__bottom">
+          <div class="projects__slider projects-slider">
+            <div class="pagination-block__button-prev swiper-button-prev projects-slider__prev-btn"></div>
+            <div class="pagination-block__button-next swiper-button-next projects-slider__next-btn"></div>
+            <div class="swiper-wrapper projects-slider__wrapper">
+              <div class="swiper-slide projects-slider__slide projects-slider__slide--1"></div>
+              <div class="swiper-slide projects-slider__slide projects-slider__slide--2"></div>
+              <div class="swiper-slide projects-slider__slide projects-slider__slide--3"></div>
+              <div class="swiper-slide projects-slider__slide projects-slider__slide--4"></div>
+              <div class="swiper-slide projects-slider__slide projects-slider__slide--5"></div>
+              <div class="swiper-slide projects-slider__slide projects-slider__slide--6"></div>
+              <div class="swiper-slide projects-slider__slide projects-slider__slide--7"></div>
+              <div class="swiper-slide projects-slider__slide projects-slider__slide--8"></div>
+              <div class="swiper-slide projects-slider__slide projects-slider__slide--9"></div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
