--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,6 @@
   </main>
   @include('html/footer.html')
 </div>
-<script src="js/main.js"></script>
+<script src="js/main.js" defer></script>
 </body>
 </html>
