--- a/app/index.html
+++ b/app/index.html
@@ -23,21 +23,19 @@
         <a href="#" class="header-top__logo">
           <img src="img/logo.png" alt="Логотип Blanchard">
         </a>
-        <div class="search search--mobile">
+        <form class="search search--mobile">
           <button class="btn-reset search__btn search__btn--mobile" type="submit" aria-label="поиск по сайту">
             <svg>
               <use xlink:href="img/sprite.svg#search"></use>
             </svg>
           </button>
-          <label for="search-mobile">
-            <input type="text" class="search__input input" id="search-mobile" placeholder="Поиск по сайту">
-          </label>
+          <input type="text" class="search__input input" id="search-mobile" placeholder="Поиск по сайту">
           <button class="btn-reset search__close">
             <svg>
               <use xlink:href="img/sprite.svg#X"></use>
             </svg>
           </button>
-        </div>
+        </form>
         <nav class="nav header-top__nav">
           <button class="btn-reset nav__close">
             <svg>
@@ -64,8 +62,8 @@
     </div>
     <div class="header__bottom">
       <div class="container header-bottom__container">
-        <div class="header-bottom__select">
-          <div class="header-select__realism header-select">
+        <ul class="header-bottom__select">
+          <li class="header-select__realism header-select">
             <div class="header-select__top" tabindex="0" role="combobox" aria-label="реализм" aria-expanded="false">
               Реализм
               <svg>
@@ -78,8 +76,8 @@
                 <li class="header-select__item">Ерёмин</li>
               </ul>
             </div>
-          </div>
-          <div class="header-select__impressionism header-select">
+          </li>
+          <li class="header-select__impressionism header-select">
             <div class="header-select__top" role="combobox" tabindex="0" aria-label="импрессионизм" aria-expanded="false">
               Импрессионизм
               <svg>
@@ -96,9 +94,9 @@
                 <li class="header-select__item">Писсарро</li>
               </ul>
             </div>
-          </div>
+          </li>
 
-          <div class="header-select__post-impressionism header-select">
+          <li class="header-select__post-impressionism header-select">
             <div class="header-select__top" role="combobox" tabindex="0" aria-label="постимпрессионизм"
                  aria-expanded="false">Постимпрессионизм
               <svg>
@@ -115,9 +113,9 @@
                 <li class="header-select__item">Ван Гог</li>
               </ul>
             </div>
-          </div>
+          </li>
 
-          <div class="header-select__vanguard header-select">
+          <li class="header-select__vanguard header-select">
             <div class="header-select__top" role="combobox" tabindex="0" aria-label="авангард" aria-expanded="false">
               Авангард
               <svg>
@@ -134,9 +132,9 @@
                 <li class="header-select__item">Попова</li>
               </ul>
             </div>
-          </div>
+          </li>
 
-          <div class="header-select__futurism header-select">
+          <li class="header-select__futurism header-select">
             <div class="header-select__top" role="combobox" tabindex="0" aria-label="футуризм" aria-expanded="false">
               Футуризм
               <svg>
@@ -153,18 +151,16 @@
                 <li class="header-select__item">Боччиони</li>
               </ul>
             </div>
-          </div>
-        </div>
-        <div class="header-bottom__search search">
+          </li>
+        </ul>
+        <form class="header-bottom__search search">
           <button class="btn-reset search__btn" type="submit" aria-label="поиск по сайту">
             <svg>
               <use xlink:href="img/sprite.svg#search"></use>
             </svg>
           </button>
-          <label for="search">
-            <input type="search" id="search" class="search__input input" placeholder="Поиск по сайту">
-          </label>
-        </div>
+          <input type="search" id="search" class="search__input input" placeholder="Поиск по сайту">
+        </form>
       </div>
     </div>
   </header>
@@ -1693,16 +1689,12 @@
           <h3 class="contacts-left__back-call subtitle">Заказать обратный звонок</h3>
           <form action="#" class="js-form contacts-left__form">
             <div class="just-validate-tooltip-container">
-              <label for="name">
-                <input type="text" id="name" name="name" placeholder="Имя*" required data-validate-field="name"
-                       class="form__input form-control">
-              </label>
+              <input type="text" id="name" name="name" placeholder="Имя*" required data-validate-field="name"
+                     class="form__input form-control">
             </div>
             <div class="just-validate-tooltip-container">
-              <label for="phone">
-                <input type="tel" data-validate-field="phone" data-validate-rules="phone" name="phone" id="phone"
-                       placeholder="Телефон*" required class="form__input form-control">
-              </label>
+              <input type="tel" data-validate-field="phone" data-validate-rules="phone" name="phone" id="phone"
+                     placeholder="Телефон*" required class="form__input form-control">
             </div>
             <button type="submit" class="btn-reset contacts-left__btn btn"><span>Заказать</span></button>
           </form>
